<resources>
    <string name="app_name">formtocall</string>
    <string name="title_pg">Insert your profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="insert">Insert</string>
    <string name="welcome">Welcome</string>
    <string name="call">Call</string>
    <string name="back">Back</string>
    <string name="mobile">Mobile</string>
    <string name="user_condition">user conditions</string>
    <string name="lorem_Ipsum">Saepissime igitur mihi de amicitia cogitanti maxime illud considerandum videri solet, utrum propter imbecillitatem atque inopiam desiderata sit amicitia, ut dandis recipiendisque meritis quod quisque minus per se ipse posset, id acciperet ab alio vicissimque redderet, an esset hoc quidem proprium amicitiae, sed antiquior et pulchrior et magis a natura ipsa profecta alia causa. Amor enim, ex quo amicitia nominata est, princeps est ad benevolentiam coniungendam. Nam utilitates quidem etiam ab iis percipiuntur saepe qui simulatione amicitiae coluntur et observantur temporis causa, in amicitia autem nihil fictum est, nihil simulatum et, quidquid est, id est verum et voluntarium.</string>
    <string name="close">Close</string>
    <string name="Bye">Bye Bye : %s</string>
</resources>